--- a/mentoria_entregable_edu.ipynb
+++ b/mentoria_entregable_edu.ipynb
@@ -2119,27 +2119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2800/1335128493.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \"\"\"\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Poblacion_partido'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Personas_con_cloacas'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mmax_decimales\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf7\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Convertir multiplicando por 10^max_decimales\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mdf7\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf7\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mmax_decimales\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Int64'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Por último, observo que los valores de las variables Poblacion_partido y Personas_con_cloacas me quedaron como \n",
     "punto flotantes, pues los puntos que separaban cada 3 cifras en español fueron interpretados como comas.\n",
     "Arreglo este problema\n",
     "\"\"\"\n",
+    "df7 = df6.copy()\n",
     "for col in ['Poblacion_partido', 'Personas_con_cloacas']:\n",
     "    max_decimales = df7[col].dropna().apply(lambda x: len(str(x).split('.')[1])).max()\n",
     "    # Convertir multiplicando por 10^max_decimales\n",
@@ -2148,9 +2137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2259,8 +2248,8 @@
        "      <td>Del arca</td>\n",
        "      <td>-34.438.919</td>\n",
        "      <td>-58.536.519</td>\n",
-       "      <td>171.616</td>\n",
-       "      <td>157.308</td>\n",
+       "      <td>171616</td>\n",
+       "      <td>157308</td>\n",
        "      <td>\"Actividad náutica\"</td>\n",
        "      <td>2.0</td>\n",
        "      <td>7.0</td>\n",
@@ -2307,8 +2296,8 @@
        "      <td>Costanera Hudson calle 63</td>\n",
        "      <td>-34.753</td>\n",
        "      <td>-58.108.281</td>\n",
-       "      <td>358.712</td>\n",
-       "      <td>267.760</td>\n",
+       "      <td>358712</td>\n",
+       "      <td>267760</td>\n",
        "      <td>\"Agricultura, ganadería, caza y silvicultura\"</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
@@ -2355,8 +2344,8 @@
        "      <td>Balneario Palo Blanco</td>\n",
        "      <td>-34.855.808</td>\n",
        "      <td>-57.838.144</td>\n",
-       "      <td>100.930</td>\n",
-       "      <td>47.630</td>\n",
+       "      <td>100930</td>\n",
+       "      <td>47630</td>\n",
        "      <td>\"Industria Manufacturera\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2403,8 +2392,8 @@
        "      <td>Perú puente</td>\n",
        "      <td>-34.484.169</td>\n",
        "      <td>-5.847.945</td>\n",
-       "      <td>297.282</td>\n",
-       "      <td>275.528</td>\n",
+       "      <td>297282</td>\n",
+       "      <td>275528</td>\n",
        "      <td>\"Explotación de minas y canteras con el 11,53%...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
@@ -2451,8 +2440,8 @@
        "      <td>Reserva ciudad universitaria: marisma canal de...</td>\n",
        "      <td>-34.538.686</td>\n",
        "      <td>-58.445.589</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>\"servicios inmobiliarios, financieros y comercio\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2499,8 +2488,8 @@
        "      <td>Costanera norte espigón abanico</td>\n",
        "      <td>-34.547.089</td>\n",
        "      <td>-58.430.231</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>\"servicios inmobiliarios, financieros y comercio\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2547,8 +2536,8 @@
        "      <td>Canal Villanueva y río Luján</td>\n",
        "      <td>-34.408.061</td>\n",
        "      <td>-58.590.839</td>\n",
-       "      <td>446.949</td>\n",
-       "      <td>144.834</td>\n",
+       "      <td>446949</td>\n",
+       "      <td>144834</td>\n",
        "      <td>\"La industria metalúrgica y la actividad mader...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
@@ -2595,8 +2584,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2643,8 +2632,8 @@
        "      <td>Playa La Bagliardi</td>\n",
        "      <td>-34.873.061</td>\n",
        "      <td>-57.810.561</td>\n",
-       "      <td>100.930</td>\n",
-       "      <td>47.630</td>\n",
+       "      <td>100930</td>\n",
+       "      <td>47630</td>\n",
        "      <td>\"Industria Manufacturera\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2691,8 +2680,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2739,8 +2728,8 @@
        "      <td>Canal Villanueva y río Luján</td>\n",
        "      <td>-34.408.061</td>\n",
        "      <td>-58.590.839</td>\n",
-       "      <td>446.949</td>\n",
-       "      <td>144.834</td>\n",
+       "      <td>446949</td>\n",
+       "      <td>144834</td>\n",
        "      <td>\"La industria metalúrgica y la actividad mader...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
@@ -2787,8 +2776,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2835,8 +2824,8 @@
        "      <td>Costanera norte espigón abanico</td>\n",
        "      <td>-34.547.089</td>\n",
        "      <td>-58.430.231</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>\"servicios inmobiliarios, financieros y comercio\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2883,8 +2872,8 @@
        "      <td>Escollera de propaneros</td>\n",
        "      <td>-34.63</td>\n",
        "      <td>-58.328.339</td>\n",
-       "      <td>367.554</td>\n",
-       "      <td>289.059</td>\n",
+       "      <td>367554</td>\n",
+       "      <td>289059</td>\n",
        "      <td>\"Producción de electricidad, gas y agua\"</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
@@ -2931,8 +2920,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2979,8 +2968,8 @@
        "      <td>Arroyo Santo Domingo</td>\n",
        "      <td>-34.662.789</td>\n",
        "      <td>-58.296.669</td>\n",
-       "      <td>367.554</td>\n",
-       "      <td>289.059</td>\n",
+       "      <td>367554</td>\n",
+       "      <td>289059</td>\n",
        "      <td>\"Producción de electricidad, gas y agua\"</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
@@ -3027,8 +3016,8 @@
        "      <td>Costanera Hudson calle 63</td>\n",
        "      <td>-34.753</td>\n",
        "      <td>-58.108.281</td>\n",
-       "      <td>358.712</td>\n",
-       "      <td>267.760</td>\n",
+       "      <td>358712</td>\n",
+       "      <td>267760</td>\n",
        "      <td>\"Agricultura, ganadería, caza y silvicultura\"</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
@@ -3075,8 +3064,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -3123,8 +3112,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -3171,8 +3160,8 @@
        "      <td>Reserva ciudad universitaria: humedal central ...</td>\n",
        "      <td>-34.539.667</td>\n",
        "      <td>-58.443.781</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>\"servicios inmobiliarios, financieros y comercio\"</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -3364,26 +3353,26 @@
        "552  Reserva ciudad universitaria: humedal central ...  -34.539.667   \n",
        "\n",
        "        longitud  Poblacion_partido  Personas_con_cloacas  \\\n",
-       "453  -58.536.519            171.616               157.308   \n",
-       "52   -58.108.281            358.712               267.760   \n",
-       "535  -57.838.144            100.930                47.630   \n",
-       "468   -5.847.945            297.282               275.528   \n",
-       "55   -58.445.589                NaN                   NaN   \n",
-       "62   -58.430.231                NaN                   NaN   \n",
-       "487  -58.590.839            446.949               144.834   \n",
-       "594          NaN                NaN                   NaN   \n",
-       "367  -57.810.561            100.930                47.630   \n",
-       "460          NaN                NaN                   NaN   \n",
-       "310  -58.590.839            446.949               144.834   \n",
-       "497          NaN                NaN                   NaN   \n",
-       "233  -58.430.231                NaN                   NaN   \n",
-       "361  -58.328.339            367.554               289.059   \n",
-       "589          NaN                NaN                   NaN   \n",
-       "357  -58.296.669            367.554               289.059   \n",
-       "547  -58.108.281            358.712               267.760   \n",
-       "386          NaN                NaN                   NaN   \n",
-       "605          NaN                NaN                   NaN   \n",
-       "552  -58.443.781                NaN                   NaN   \n",
+       "453  -58.536.519             171616                157308   \n",
+       "52   -58.108.281             358712                267760   \n",
+       "535  -57.838.144             100930                 47630   \n",
+       "468   -5.847.945             297282                275528   \n",
+       "55   -58.445.589               <NA>                  <NA>   \n",
+       "62   -58.430.231               <NA>                  <NA>   \n",
+       "487  -58.590.839             446949                144834   \n",
+       "594          NaN               <NA>                  <NA>   \n",
+       "367  -57.810.561             100930                 47630   \n",
+       "460          NaN               <NA>                  <NA>   \n",
+       "310  -58.590.839             446949                144834   \n",
+       "497          NaN               <NA>                  <NA>   \n",
+       "233  -58.430.231               <NA>                  <NA>   \n",
+       "361  -58.328.339             367554                289059   \n",
+       "589          NaN               <NA>                  <NA>   \n",
+       "357  -58.296.669             367554                289059   \n",
+       "547  -58.108.281             358712                267760   \n",
+       "386          NaN               <NA>                  <NA>   \n",
+       "605          NaN               <NA>                  <NA>   \n",
+       "552  -58.443.781               <NA>                  <NA>   \n",
        "\n",
        "                                   Actividad_principal  \\\n",
        "453                                \"Actividad náutica\"   \n",
@@ -3501,12 +3490,12 @@
     }
    ],
    "source": [
-    "display(df6.sample(20, random_state=0))"
+    "display(df7.sample(20, random_state=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {
     "scrolled": false
    },
