Se actualiza notebook Edu para corregir fechas

--- a/mentoria_entregable_edu.ipynb
+++ b/mentoria_entregable_edu.ipynb
@@ -1966,12 +1966,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correción fechas como int"
+    "### Correción fechas como int\n",
+    "- Se detectan algunas fechas en formato int como **45623** ó **45628**\n",
+    "- Se interpreta como causa la conversión automática que hace Excel si no se le especifica el formato fecha\n",
+    "- A continuación se aplica una función de python para detectar dichos casos y convertirlos a formato dd/mm/yyyy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2016,6 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "df_fix_date = df.copy(deep=True)\n",
-    "# df[[\"fecha\"]].to_csv(\"fecha_original.csv\", index=False)\n",
     "# Function to convert Excel serial number to date string\n",
     "def convert_excel_serial_date(value):\n",
     "    # print(type(value))\n",
@@ -2030,13 +2032,12 @@
     "    return value\n",
     "\n",
     "# Apply fix\n",
-    "df_fix_date[\"fecha\"] = df_fix_date[\"fecha\"].apply(convert_excel_serial_date)\n",
-    "# df_fix_date[[\"fecha\"]].to_csv(\"fecha_fixed.csv\", index=False)"
+    "df_fix_date[\"fecha\"] = df_fix_date[\"fecha\"].apply(convert_excel_serial_date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,10 +2045,8 @@
     "    # en la columna fecha\n",
     "# Ejemplo de DataFrame\n",
     "# 1. Convertir a datetime con formato dd/mm/aaaa, forzando errores a NaN\n",
-    "# df2 = df.copy(deep=True)\n",
     "df2 = df_fix_date.copy(deep=True)\n",
-    "df2['fecha'] = pd.to_datetime(df_fix_date['fecha'], format='%d/%m/%Y', errors='coerce')\n",
-    "# df2[[\"fecha\"]].to_csv(\"fecha_fixed_2.csv\", index=False)\n"
+    "df2['fecha'] = pd.to_datetime(df_fix_date['fecha'], format='%d/%m/%Y', errors='coerce')"
    ]
   },
   {
