--- a/tp1_candidate.ipynb
+++ b/tp1_candidate.ipynb
@@ -369,11 +369,11 @@
     "**DUDA**\n",
     "Las variables; colif_fecales_ufc_100ml \tescher_coli_ufc_100ml \tenteroc_ufc_100ml    turbiedad_ntu    ica\n",
     "\n",
-    "¿Deberían ser clasificadas como continuas o discretas? Capaz tiene poco sentid hacerse esa pregunta, de momento no le doy bola\n",
+    "¿Deberían ser clasific\n",
     "\n",
     "**DUDA**\n",
     "\n",
-    "Estaría bien también clasificar las variables:\n",
+    "Se procedió a clasificar las variables como continuas o discretas, aunque por el momento no se ha definido si dicha distinción será utilizada en el análisis. No obstante, se considera pertinente dejar asentada esta categorización en caso de que resulte relevante en etapas posteriores del estudio.\n",
     "\n",
     "    Agricultura, ganadería, caza y silvicultura:\n",
     "    Pesca explotación de criaderos de peces y granjas piscícolas y servicios conexos\n",
