--- a/tp1_candidate.ipynb
+++ b/tp1_candidate.ipynb
@@ -369,9 +369,7 @@
     "**DUDA**\n",
     "Las variables; colif_fecales_ufc_100ml \tescher_coli_ufc_100ml \tenteroc_ufc_100ml    turbiedad_ntu    ica\n",
     "\n",
-    "¿Deberían ser clasific\n",
-    "\n",
-    "**DUDA**\n",
+    "¿Deberían ser clasificcadas?",
     "\n",
     "Se procedió a clasificar las variables como continuas o discretas, aunque por el momento no se ha definido si dicha distinción será utilizada en el análisis. No obstante, se considera pertinente dejar asentada esta categorización en caso de que resulte relevante en etapas posteriores del estudio.\n",
     "\n",
