--- a/TP2/TP2_mentoria.ipynb
+++ b/TP2/TP2_mentoria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "781f76e0",
+   "id": "db9973aa",
    "metadata": {},
    "source": [
     "# Grupo 2\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c491eb5",
+   "id": "03ee2b77",
    "metadata": {},
    "source": [
     "# 1. Importación de Librerías y Configuraciones Iniciales"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e316dec",
+   "id": "a950855e",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d8bfa2",
+   "id": "a8d86409",
    "metadata": {},
    "source": [
     "tp2_utils contiene funciones útiles para este trabajo, las que para limpieza de este notebook se prefirió mantener en una librería a importar.\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d064cec0",
+   "id": "cb1eba1b",
    "metadata": {},
    "source": [
     "# Importacón de base de datos original"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f819b69f",
+   "id": "c8db0d52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d8fded",
+   "id": "e518c737",
    "metadata": {},
    "source": [
     "# Limpieza y Curación de los Datos No Numéricos"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea292e4",
+   "id": "48e5598b",
    "metadata": {},
    "source": [
     "Aplicamos las mismas transformaciones realizadas en el Trabajo Práctico 1, con algunas modificaciones:\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84f1ebdf",
+   "id": "a2e764c6",
    "metadata": {
     "scrolled": false
    },
@@ -154,17 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bae7cdd0",
-   "metadata": {},
-   "source": [
-    "Hasta acá las cosas pasadas en limpio. Lo de abajo no es para la versión final del trabajo, sino que son algunas exploraciones y pruebas.Faltan:\n",
-    "- Todas las variables numéricas, pues aún no decidimos qué hacer con los '<', '>'\n",
-    "- Actividad principal: Si decidimos descartarla, no hacemos nada. Lo único a considerar es que hay actividades mencionadas acá que no están entre las variables ordinales de actividad (ver dudas)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "81ac6dfd",
+   "id": "05d7ac59",
    "metadata": {},
    "source": [
     "# Limpieza y Curación de los Variables Numéricas"
@@ -172,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126f73d1",
+   "id": "c492bf97",
    "metadata": {},
    "source": [
     "**colif_fecales_ufc_100ml:** Idenfiticamos un valor outlier, y valores con '<', '>'."
@@ -181,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c50d4786",
+   "id": "745c6ce6",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +195,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a945049",
+   "id": "e0e09540",
+   "metadata": {},
+   "source": [
+    "**Hasta acá las cosas pasadas en limpio.** Lo de abajo no es para la versión final del trabajo, sino que son algunas exploraciones y pruebas.Faltan:\n",
+    "- Todas las variables numéricas, pues aún no decidimos qué hacer con los '<', '>'\n",
+    "- Actividad principal: Si decidimos descartarla, no hacemos nada. Lo único a considerar es que hay actividades mencionadas acá que no están entre las variables ordinales de actividad (ver dudas)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300aa1ad",
    "metadata": {},
    "source": [
     "# Pruebasss\n"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fa3fbebf",
+   "id": "165a4f54",
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12070f54",
+   "id": "cb6f15b7",
    "metadata": {
     "scrolled": true
    },
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "354190ab",
+   "id": "51f4fb82",
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "264fd386",
+   "id": "5f241f70",
    "metadata": {
     "scrolled": true
    },
@@ -2073,7 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a6e0a45b",
+   "id": "6d472894",
    "metadata": {
     "scrolled": true
    },
@@ -2101,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f6e0fd9d",
+   "id": "4e701752",
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f22ac0d7",
+   "id": "2d1d2c79",
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0b93d07c",
+   "id": "58c09da7",
    "metadata": {
     "scrolled": true
    },
@@ -2657,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0d00540f",
+   "id": "180fa7f4",
    "metadata": {
     "scrolled": true
    },
@@ -2955,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1a18f1e3",
+   "id": "0ee53a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2972,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1c986ecf",
+   "id": "a517bdb8",
    "metadata": {
     "scrolled": false
    },
@@ -2997,7 +2997,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "04a4770c",
+   "id": "9e158d49",
    "metadata": {
     "scrolled": true
    },
@@ -3022,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb0e627d",
+   "id": "d2d6870f",
    "metadata": {},
    "outputs": [
     {
@@ -3067,7 +3067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d8d6ab",
+   "id": "038e18ae",
    "metadata": {},
    "source": [
     "# Dudas"
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0595e4f7",
+   "id": "660ce827",
    "metadata": {},
    "source": [
     "**1. Para descartar Actividad_Principal**\n",
@@ -3088,7 +3088,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f7c3d16b",
+   "id": "85d9e82d",
    "metadata": {
     "scrolled": true
    },
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "614cc60d",
+   "id": "ce7584fc",
    "metadata": {},
    "source": [
     "**Qué onda CABA???** Es enorme, no se que sentido tiene equiparar sus datos del censo y Programa del Conurbano con los de los municipios, mucho más acotados."
