--- a/TP1/M07_TP1.ipynb
+++ b/TP1/M07_TP1.ipynb
@@ -7966,7 +7966,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "robot-playground",
+   "display_name": "gpurpose-env",
    "language": "python",
    "name": "python3"
   },
@@ -7980,7 +7980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
