--- a/TP2/TP2_mentoria.ipynb
+++ b/TP2/TP2_mentoria.ipynb
@@ -26,16 +26,7 @@
    "execution_count": 1,
    "id": "f9cef2e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/edu/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
-      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importación de librerías\n",
     "import pandas as pd\n",
@@ -71,7 +62,7 @@
    "id": "3a9db294",
    "metadata": {},
    "source": [
-    "# 2. Importacón de base de datos original"
+    "# 2. Importación de base de datos original"
    ]
   },
   {
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7772bec3",
    "metadata": {
     "scrolled": true
@@ -147,7 +138,7 @@
     "df2 = correct_campana(df1) # Corrección columna 'campaña'\n",
     "df3 = correct_binary_categorical(df2) # Corrección de variables categóricas binarias\n",
     "df4 = correct_calidad_del_agua(df3) # Corrección de variable calidad_de_agua\n",
-    "df5 = correct_ano(df4) # Corrección variable año\n",
+    "df5 = correct_year(df4) # Corrección variable año\n",
     "df6 = imputation_per_muni(df5)\n",
     "\n",
     "# Guardamos el nuevo df para no tener que volver a correr todo esto cada vez\n",
@@ -584,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "diplodatos_M07_G02",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
