Se corrige referencia a función

--- a/TP2/TP2_mentoria.ipynb
+++ b/TP2/TP2_mentoria.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7772bec3",
    "metadata": {
     "scrolled": true
@@ -120,16 +120,22 @@
       "Columna 'camapaña' corregida\n",
       "Columnas olores, color, espumas, mat_susp corregidas\n",
       "Columna 'calidad_de_agua' corregida\n",
-      "Columna 'año' corregida\n",
-      "Imputación de variables de Censo y Programa de Conurbano -excepto longitud y latitud- usando código realizada\n"
+      "Columna 'año' corregida\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/edu/Facultad/DiploDatos/mentorias/TP2/tp2_utils/df_categorical_transformations_utils.py:46: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "/home/developer/diplodatos/mentoria/diplodatos2025_M07/TP2/tp2_utils/df_categorical_transformations_utils.py:84: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
       "  df1['campaña'].astype(str).str.contains(patron, na=False)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputación de variables de Censo y Programa de Conurbano -excepto longitud y latitud- usando código realizada\n"
      ]
     }
    ],
@@ -530,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "13d0ca75",
    "metadata": {},
    "outputs": [
@@ -550,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5653a54b",
    "metadata": {},
    "outputs": [
