Se agrega división dataset y propuesta de ramas

--- a/TP2/TP2_mentoria.ipynb
+++ b/TP2/TP2_mentoria.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "f9cef2e6",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from missingno import matrix, heatmap\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tp2_utils import *\n",
     "\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "73bb9ad8",
    "metadata": {},
    "outputs": [],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "7772bec3",
    "metadata": {
     "scrolled": true
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "10946f2c",
    "metadata": {
     "scrolled": true
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7bb660e7",
    "metadata": {
     "scrolled": true
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "187f35b6",
    "metadata": {
     "scrolled": true
@@ -483,7 +484,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imputación de valores outliers de columna colif_fecales_ufc_100ml -mayores a 2000000.0- completada)\n",
+      "Imputación de valores outliers de columna colif_fecales_ufc_100ml -mayores a 2000000.0- completada)"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Imputación de valores outliers de columna escher_coli_ufc_100ml -mayores a 125000- completada)\n",
       "Imputación de valores outliers de columna enteroc_ufc_100ml -mayores a 25000- completada)\n",
       "Imputación de valores outliers de columna nitrato_mg_l -mayores a 25- completada)\n",
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "bd1d70a5",
    "metadata": {
     "scrolled": true
@@ -536,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "13d0ca75",
    "metadata": {},
    "outputs": [
@@ -556,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "5653a54b",
    "metadata": {},
    "outputs": [
@@ -575,7 +583,156 @@
     "df10 = set_to_numerical(df10)\n",
     "\n",
     "# Guardamos el nuevo df para no tener que volver a correr todo esto cada vez\n",
-    "df6.to_csv('./aguas_limpieza_final.csv', index=False)"
+    "# df6.to_csv('./aguas_limpieza_final.csv', index=False)\n",
+    "df10.to_csv('./aguas_limpieza_final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ca8099",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# División del dataset\n",
+    "\n",
+    "- Se usa clorofila_a_ug_l como variable objetivo para regresión.\n",
+    "- Se realiza la división en train (70%), validación (20%), y test (10%)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85f0064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 429 muestras (69.98%)\n",
+      "Validación: 122 muestras (19.90%)\n",
+      "Test: 62 muestras (10.11%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Leer el dataset limpio desde CSV\n",
+    "df_limpio = pd.read_csv(\"aguas_limpieza_final.csv\")\n",
+    "\n",
+    "# 2. Definir variable objetivo\n",
+    "target_col = \"clorofila_a_ug_l\"\n",
+    "X = df_limpio.drop(columns=[target_col])\n",
+    "y = df_limpio[target_col]\n",
+    "\n",
+    "# 3. Dividir en train (70%) y temp (30%)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=42\n",
+    ")\n",
+    "\n",
+    "# 4. Dividir temp en validación (20%) y test (10%)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_temp, y_temp, test_size=0.3333, random_state=42\n",
+    ")\n",
+    "\n",
+    "# 5. Verificar proporciones\n",
+    "total = len(df_limpio)\n",
+    "print(f\"Train: {len(X_train)} muestras ({len(X_train)/total:.2%})\")\n",
+    "print(f\"Validación: {len(X_val)} muestras ({len(X_val)/total:.2%})\")\n",
+    "print(f\"Test: {len(X_test)} muestras ({len(X_test)/total:.2%})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba232dcb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Ramas paralelas de experimentación\n",
+    "Se proponen las siguientes ramas iniciales de trabajo:\n",
+    "- Rama A: Conservar todas las variables\n",
+    "- Rama B: Eliminar variables altamente correlacionadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a8fd7da",
+   "metadata": {},
+   "source": [
+    "### Rama A: Conservar todas las variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98589cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Guardar dataset sin modificaciones de la división anterior\n",
+    "X_train.to_csv(\"X_train_ramaB.csv\", index=False)\n",
+    "X_val.to_csv(\"X_val_ramaB.csv\", index=False)\n",
+    "X_test.to_csv(\"X_test_ramaB.csv\", index=False)\n",
+    "\n",
+    "print(\"Rama A creada y guardada con éxito.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb6a5c92",
+   "metadata": {},
+   "source": [
+    "### Rama B: Eliminar variables altamente correlacionadas\n",
+    "Eliminar variables numéricas que estén altamente correlacionadas (|r| > 0.85), dejando solo una de cada grupo correlacionado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c500f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Calcular matriz de correlación absoluta en X_train\n",
+    "matriz_corr = X_train.select_dtypes(include=[np.number]).corr().abs()\n",
+    "\n",
+    "# 2. Crear máscara para triangular superior (evita duplicados)\n",
+    "mascara = np.triu(np.ones(matriz_corr.shape), k=1).astype(bool)\n",
+    "corr_sup = matriz_corr.where(mascara)\n",
+    "\n",
+    "# 3. Identificar columnas con correlación > 0.85\n",
+    "columnas_correlacionadas = [col for col in corr_sup.columns if any(corr_sup[col] > 0.85)]\n",
+    "\n",
+    "print(\"Columnas eliminadas por alta correlación:\", columnas_correlacionadas)\n",
+    "\n",
+    "# 4. Eliminar las columnas de los tres conjuntos\n",
+    "X_train_sin_corr = X_train.drop(columns=columnas_correlacionadas)\n",
+    "X_val_sin_corr = X_val.drop(columns=columnas_correlacionadas)\n",
+    "X_test_sin_corr = X_test.drop(columns=columnas_correlacionadas)\n",
+    "\n",
+    "# 5. (opcional) Guardar en CSV para trabajar sobre esta rama\n",
+    "# X_train_sin_corr.to_csv(\"X_train_ramaB.csv\", index=False)\n",
+    "# X_val_sin_corr.to_csv(\"X_val_ramaB.csv\", index=False)\n",
+    "# X_test_sin_corr.to_csv(\"X_test_ramaB.csv\", index=False)\n",
+    "\n",
+    "print(\"Rama B creada y guardada con éxito.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb070a0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Imputación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b9a2d9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Modelo"
    ]
   }
  ],
