--- a/TP2_version_3_con_correcciones_obligatorias/TP2_mentoria.ipynb
+++ b/TP2_version_3_con_correcciones_obligatorias/TP2_mentoria.ipynb
@@ -1782,7 +1782,7 @@
    "id": "f0f42cb8",
    "metadata": {},
    "source": [
-    "Realizamos una imputación simple para las variables categóricas año y campaña: Imputamos los valores faltantes por el más frecuente. Además, transformamos los datos de campaña a numéricos para que queden correctamente codificados para su uso en el modelo que se vaya a implementar."
+    "Realizamos una imputación simple para las variables categóricas año y campaña: Imputamos los valores faltantes por el más frecuente. Además, transformamos los datos de año a numéricos para que queden correctamente codificados para su uso en el modelo que se vaya a implementar."
    ]
   },
   {
@@ -1958,7 +1958,9 @@
    "id": "36b43d56",
    "metadata": {},
    "source": [
-    "Realizamos un One-Hot Encoding sobre las variables categóricas no binarias (las binarias ya fueron codificadas al inicio de este trabajo)."
+    "Codificamos las variables categóricas no binarias (excepto año) -las binarias ya fueron codificadas al inicio de este trabajo-.\n",
+    "\n",
+    "La variable codigo es codificada con una codificación ordinal, mientras que la variable campaña con One Hot Encoding."
    ]
   },
   {
